adding the submodule for kernel bench experiments

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "KBDr_Runner"]
 	path = KBDr_Runner
 	url = https://github.com/Alex-Mathai-98/kGym-Kernel-Gym.git
+[submodule "Kernel_Bench_Experiments"]
+	path = Kernel_Bench_Experiments
+	url = https://github.com/Alex-Mathai-98/kGym-Kernel-Bench-Experiments.git
