--- a/environment.yml
+++ b/environment.yml
@@ -140,7 +140,6 @@ dependencies:
       - identify==2.5.31
       - idna==3.4
       - iniconfig==2.0.0
-      - install==1.3.5
       - instructorembedding==1.0.1
       - ipython==8.17.2
       - isort==5.13.2
@@ -195,6 +194,7 @@ dependencies:
       - peft==0.10.0
       - pexpect==4.8.0
       - pillow==10.3.0
+      - pip-install==1.3.5
       - platformdirs==3.11.0
       - plotly==5.18.0
       - pluggy==1.3.0
